[gd_scene load_steps=17 format=2]

[ext_resource path="res://res/ui/bt_close_disabled.png" type="Texture" id=1]
[ext_resource path="res://res/ui/bt_close.png" type="Texture" id=2]
[ext_resource path="res://res/ui/bt_close_active.png" type="Texture" id=3]
[ext_resource path="res://res/ui/bt_close_hover.png" type="Texture" id=4]
[ext_resource path="res://GodotOS/elements/window_bar/window_bar.gd" type="Script" id=5]
[ext_resource path="res://res/ui/bt_minus_disabled.png" type="Texture" id=6]
[ext_resource path="res://res/fonts/charybdis/Charybdis.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://res/ui/bt_square_disabled.png" type="Texture" id=8]
[ext_resource path="res://res/ui/bt_minus_hover.png" type="Texture" id=9]
[ext_resource path="res://res/ui/bt_square.png" type="Texture" id=10]
[ext_resource path="res://res/ui/bt_square_active.png" type="Texture" id=11]
[ext_resource path="res://res/ui/bt_minus_active.png" type="Texture" id=12]
[ext_resource path="res://res/ui/bt_minus.png" type="Texture" id=13]
[ext_resource path="res://res/ui/bt_square_hover.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[node name="window_bar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 33 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 33.0
dragger_visibility = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 104.0
margin_bottom = 33.0

[node name="BtClose" type="TextureButton" parent="VBoxContainer/HSplitContainer/Buttons"]
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
expand = true

[node name="BtMinus" type="TextureButton" parent="VBoxContainer/HSplitContainer/Buttons"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="BtExpand" type="TextureButton" parent="VBoxContainer/HSplitContainer/Buttons"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 8 )
expand = true

[node name="Title" type="CenterContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 104.0
margin_right = 1024.0
margin_bottom = 33.0

[node name="Title" type="Label" parent="VBoxContainer/HSplitContainer/Title"]
margin_left = 418.0
margin_right = 502.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Window"
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Buttons/BtClose" to="." method="_on_BtClose_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Buttons/BtMinus" to="." method="_on_BtMinus_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Buttons/BtExpand" to="." method="_on_BtExpand_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HSplitContainer/Title" to="." method="_on_Title_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HSplitContainer/Title" to="." method="_on_Title_mouse_exited"]
